# Seahorse

./: LICENSE  README.md  compose.yaml  run.sh
src/api/: .gitignore  Cargo.toml  Dockerfile  README.md
src/api/.github/: pull_request_template.md
src/api/.github/workflows/: rust_stable.yml  rust_unstable.yml
src/api/src/: ddl.rs  errors.rs  handlers.rs  main.rs  models.rs  pool.rs  reader.rs  record_batch.rs  resultset.rs  routes.rs  schema.rs  seahorse.rs  state.rs  topk.rs  utils.rs
src/engine/: .gitignore  CMakeLists.txt  Dockerfile  client.py  docker-entrypoint.sh
src/engine/.github/: pull_request_template.md
src/engine/.github/workflows/: main.yaml
src/engine/deploy/base/: kustomization.yaml  seahorsedb-config.yaml  seahorsedb-namespace.yaml  seahorsedb-service.yaml  seahorsedb-statefulset.yaml
src/engine/deploy/test/: kustomization.yaml  pod-service-template.yaml  statefulset-patches.yaml
src/engine/src/: aof.c  cluster.c  commands.def  config.c  db.c  debug.c  evict.c  fmacros.h  module.c  object.c  rdb.c  redis-check-rdb.c  script_lua.c  server.c  server.h  zmalloc.c  zmalloc.h
src/engine/src/commands/: vdb-table-ann.json  vdb-table-batch-ann.json  vdb-table-batch-insert.json  vdb-table-countindexedelements.json  vdb-table-create.json  vdb-table-insert.json  vdb-table-scan.json  vdb-test.json
src/engine/src/vdb/: vdb.hh  vdb_api.cc  vdb_api.hh  vdb_command_impl.cc
src/engine/tests/bash_scripts/: README.md
src/engine/tests/pytest_scripts/: regression.py
src/engine/tests/test_data/: README.md
src/engine/utils/: generate-command-code.py
(+45 files in other folders)
